update bookings table
